--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>gmall-mocker</module>
         <module>gmall-logger</module>
         <module>gmall-realtime</module>
+        <module>dw-chart</module>
+        <module>dw-canal</module>
+        <module>dw-canal</module>
     </modules>
 
     <properties>
