--- a/gmall-realtime/src/main/resources/config.properties
+++ b/gmall-realtime/src/main/resources/config.properties
@@ -4,3 +4,6 @@ kafka.broker.list=hadoop107:9092,hadoop108:9092,hadoop109:9092
 # Redis≈‰÷√
 redis.host=hadoop107
 redis.port=6379
+#phoenix ≈‰÷√
+phoenix.zk.url="hadoop107,hadoop108,hadoop109:2181"
+phoenix.dua.table="GMALL2020_DAU"
