--- a/gmall-realtime/src/main/resources/config.properties
+++ b/gmall-realtime/src/main/resources/config.properties
@@ -6,4 +6,7 @@ redis.host=hadoop107
 redis.port=6379
 #phoenix ≈‰÷√
 phoenix.zk.url="hadoop107,hadoop108,hadoop109:2181"
-phoenix.dua.table="GMALL2020_DAU"
+phoenix.dua.table="GMALL2020_DAU"1
+phoenix.orderInfo.table="GMALL2020_ORDER_INFO"
+#ES index «∞◊∫
+es.warning.prefix=gmall_coupon_alert
