--- a/gmall-realtime/pom.xml
+++ b/gmall-realtime/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>hadoop-client</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_2.11</artifactId>
+            <version>3.5.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
