--- a/gmall-realtime/src/main/resources/config.properties
+++ b/gmall-realtime/src/main/resources/config.properties
@@ -10,3 +10,9 @@ phoenix.dua.table="GMALL2020_DAU"1
 phoenix.orderInfo.table="GMALL2020_ORDER_INFO"
 #ES index Ç°×º
 es.warning.prefix=gmall_coupon_alert
+es.sale.prefix=gmall0523_sale_detail
+#JDBCÁ¬½Ó
+jdbc.datasource.size=10
+jdbc.url=jdbc:mysql://hadoop107:3306/spark0523?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+jdbc.user=root
+jdbc.password=333263
