--- a/gmall-publisher/src/main/resources/application.properties
+++ b/gmall-publisher/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.data-password=
 #mybatis.typeAliasesPackage=com.example.phoenix.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+
+#es
+spring.elasticsearch.jest.uris=http://hadoop107:9200
