--- a/gmall-realtime/pom.xml
+++ b/gmall-realtime/pom.xml
@@ -92,6 +92,19 @@
             <artifactId>json4s-native_2.11</artifactId>
             <version>3.5.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
